// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FloatingButton /> - snapshot renders FloatingButton when disabled 1`] = `
<View
  accessibilityLabel="next button. Double tap to activate"
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#b5b5b5",
      "borderRadius": 40,
      "bottom": 35.00000025,
      "elevation": 5,
      "height": 80,
      "opacity": 1,
      "position": "absolute",
      "right": 26.00000025,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 2,
      "width": 80,
    }
  }
>
  <View
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`<FloatingButton /> - snapshot renders FloatingButton when disabled and loading 1`] = `
<View
  accessibilityLabel="next button. Double tap to activate"
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#b5b5b5",
      "borderRadius": 40,
      "bottom": 35.00000025,
      "elevation": 5,
      "height": 80,
      "opacity": 1,
      "position": "absolute",
      "right": 26.00000025,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 2,
      "width": 80,
    }
  }
>
  <View
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      colorScheme="light"
      colors={
        Object {
          "ShadeOne": "#eeeeee",
          "ShadeThree": "#8e8e93",
          "ShadeTwo": "#b5b5b5",
          "activeTintOne": "#e26901",
          "background": "#fff",
          "border": "#C9C9CE",
          "card": "#fff",
          "inActiveTintOne": "#e26901",
          "primary": "#1b365d",
          "screenBackground": "#eeeeee",
          "text": "#A59F9A",
          "textFive": "#555555",
          "textFour": "#4C4C4C",
          "textThree": "#000",
          "textTwo": "#777777",
        }
      }
      dark={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        colorScheme="light"
        colors={
          Object {
            "ShadeOne": "#eeeeee",
            "ShadeThree": "#8e8e93",
            "ShadeTwo": "#b5b5b5",
            "activeTintOne": "#e26901",
            "background": "#fff",
            "border": "#C9C9CE",
            "card": "#fff",
            "inActiveTintOne": "#e26901",
            "primary": "#1b365d",
            "screenBackground": "#eeeeee",
            "text": "#A59F9A",
            "textFive": "#555555",
            "textFour": "#4C4C4C",
            "textThree": "#000",
            "textTwo": "#777777",
          }
        }
        dark={false}
        importantForAccessibility="yes"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#999",
              "fontSize": 30,
            },
            Object {
              "color": "#ffffff",
              "fontSize": 25,
              "transform": Array [
                Object {
                  "rotate": "0deg",
                },
              ],
            },
            Object {
              "fontFamily": "telldusicons",
            },
          ]
        }
      >
        loading
      </Text>
    </View>
  </View>
</View>
`;

exports[`<FloatingButton /> - snapshot renders FloatingButton when enabled 1`] = `
<View
  accessibilityLabel="next button. Double tap to activate"
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#e26901",
      "borderRadius": 40,
      "bottom": 35.00000025,
      "elevation": 5,
      "height": 80,
      "opacity": 1,
      "position": "absolute",
      "right": 26.00000025,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 2,
      "width": 80,
    }
  }
>
  <View
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`<FloatingButton /> - snapshot renders FloatingButton when enabled and loading 1`] = `
<View
  accessibilityLabel="next button. Double tap to activate"
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#e26901",
      "borderRadius": 40,
      "bottom": 35.00000025,
      "elevation": 5,
      "height": 80,
      "opacity": 1,
      "position": "absolute",
      "right": 26.00000025,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 2,
      "width": 80,
    }
  }
>
  <View
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      colorScheme="light"
      colors={
        Object {
          "ShadeOne": "#eeeeee",
          "ShadeThree": "#8e8e93",
          "ShadeTwo": "#b5b5b5",
          "activeTintOne": "#e26901",
          "background": "#fff",
          "border": "#C9C9CE",
          "card": "#fff",
          "inActiveTintOne": "#e26901",
          "primary": "#1b365d",
          "screenBackground": "#eeeeee",
          "text": "#A59F9A",
          "textFive": "#555555",
          "textFour": "#4C4C4C",
          "textThree": "#000",
          "textTwo": "#777777",
        }
      }
      dark={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        colorScheme="light"
        colors={
          Object {
            "ShadeOne": "#eeeeee",
            "ShadeThree": "#8e8e93",
            "ShadeTwo": "#b5b5b5",
            "activeTintOne": "#e26901",
            "background": "#fff",
            "border": "#C9C9CE",
            "card": "#fff",
            "inActiveTintOne": "#e26901",
            "primary": "#1b365d",
            "screenBackground": "#eeeeee",
            "text": "#A59F9A",
            "textFive": "#555555",
            "textFour": "#4C4C4C",
            "textThree": "#000",
            "textTwo": "#777777",
          }
        }
        dark={false}
        importantForAccessibility="yes"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#999",
              "fontSize": 30,
            },
            Object {
              "color": "#ffffff",
              "fontSize": 25,
              "transform": Array [
                Object {
                  "rotate": "0deg",
                },
              ],
            },
            Object {
              "fontFamily": "telldusicons",
            },
          ]
        }
      >
        loading
      </Text>
    </View>
  </View>
</View>
`;
